<resources>
    <string name="app_name">hrm_10</string>
    <string name="setting">Setting</string>
    <string name="user">User Name</string>
    <string name="pass">Password</string>
    <string name="editStaff">Edit staff</string>
    <string name="addStaff">Add staff</string>
    <string name="login1">Login in with admin</string>
    <string name="login2">Logged in successfully</string>
    <string name="login3">Login failed</string>
    <string name="logOut">Log out</string>
    <string name="rememberlogin">Remember login</string>
    <string name="singin">Sign in</string>
    <string name="nameStaff">Name</string>
    <string name="placeofbirth">Place of birth</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="positionincompany">Position in company</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="birthdayDefault">01/01/1980</string>
    <string name="birthdayMin">31/12/1900</string>
    <string name="rbStoppedWorking">Stopped</string>
    <string name="rbWorking">Working</string>
    <string name="workstatus">Work status</string>
    <string name="addSuccessfully">Add staff successfully</string>
    <string name="editFailed">Edit staff failed</string>
    <string name="editSuccessfully">Edit staff successfully</string>
    <string name="addDepartment">Add department</string>
    <string name="addDepartmentFailed">Name department that were used or null</string>
    <string name="addDepartmentSuccessfully">Add department successfully</string>
    <string name="updateDepartmFailed">Name department that were used or null</string>
    <string name="updateDepartmSuccessfully">Update department successfully</string>
    <string name="updateimage">Update image</string>
    <string name="NameDepartment">Name department</string>
    <string name="button_edit_submit">Submit</string>
    <string name="search">Search</string>
    <string name="radioButtonNameStaff">Name staff</string>
    <string name="radioButtonPhone">Phone</string>
    <string name="radioButtonDepartment">Department</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="message">Do you really want to log out?</string>
    <string name="messageExit">Do you really want to exit app?</string>
    <string name="_name">Name not empty</string>
    <string name="_phone">Phone not empty</string>
    <string name="_placeOfBirth">Place of birth not empty</string>
    <string name="_birthDay">Birthday too small</string>
</resources>
