<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.MainActivity">
    <item
        android:id="@+id/addDepartment"
        android:orderInCategory="100"
        android:title="@string/addDepartment"
        app:showAsAction="never" />
    <item
        android:id="@+id/addStaff"
        android:orderInCategory="100"
        android:title="@string/addStaff"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>