<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/text_name_edit_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/text_name_edit_department_marginLeft"
        android:layout_marginStart="@dimen/text_name_edit_department_marginLeft"
        android:layout_marginTop="@dimen/text_name_edit_department_marginTop"
        android:text="@string/NameDepartment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_editdepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_name_edit_department"
        android:layout_marginLeft="@dimen/edit_edit_department_marginLeft"
        android:layout_marginStart="@dimen/edit_edit_department_marginLeft"
        android:layout_toEndOf="@+id/text_name_edit_department"
        android:layout_toRightOf="@+id/text_name_edit_department" />

    <ImageView
        android:id="@+id/image_view_edit_department"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view_edit_department_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_name_edit_department"
        android:layout_marginTop="@dimen/image_view_edit_department_marginTop"
        android:src="@drawable/img_department1" />

    <Button
        android:id="@+id/button_edit_submit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_update_image_department"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_edit_submit_marginTop"
        android:text="@string/button_edit_submit" />

    <TextView
        android:id="@+id/text_update_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_update_image_department"
        android:layout_marginLeft="@dimen/text_update_image_marginLeft"
        android:layout_marginStart="@dimen/text_update_image_marginLeft"
        android:layout_marginTop="@dimen/text_update_image_marginTop"
        android:layout_toEndOf="@+id/image_update_image_department"
        android:layout_toRightOf="@+id/image_update_image_department"
        android:text="@string/updateimage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/image_update_image_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_name_edit_department"
        android:layout_alignStart="@+id/text_name_edit_department"
        android:layout_below="@+id/image_view_edit_department"
        android:layout_marginTop="@dimen/image_update_image_department_marginTop"
        android:src="@drawable/img_update_image_department" />

</RelativeLayout>